# Elastic-Tracker

./: .gitignore  README.md  frames.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/decomp_basis/share/decomp_basis/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/decomp_geometry/share/decomp_geometry/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/quadrotor_msgs/share/quadrotor_msgs/: local_setup.dsv  local_setup.sh  package.sh  package.xml
install/quadrotor_msgs/share/quadrotor_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_quadrotor_msgs__rosidl_generator_cExport.cmake  export_quadrotor_msgs__rosidl_generator_cppExport.cmake  export_quadrotor_msgs__rosidl_generator_pyExport.cmake  export_quadrotor_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_quadrotor_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  quadrotor_msgsConfig.cmake  quadrotor_msgs__rosidl_typesupport_cExport.cmake  quadrotor_msgs__rosidl_typesupport_cppExport.cmake  quadrotor_msgs__rosidl_typesupport_introspection_cExport.cmake  quadrotor_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/quadrotor_msgs/share/quadrotor_msgs/msg/: AuxCommand.idl  OccMap3d.idl  OccMap3d.msg  PolyTraj.idl  PolyTraj.msg  PositionCommand.idl  Px4ctrlDebug.idl  Px4ctrlDebug.msg  ReplanState.idl  ReplanState.msg  SO3Command.idl  TakeoffLand.idl
log/: latest_build
sh_utils/: land_triger.sh  pub_triger.sh
src/detection/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/detection/install/object_detection_msgs/share/object_detection_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/detection/install/object_detection_msgs/share/object_detection_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  export_object_detection_msgs__rosidl_generator_cppExport.cmake  export_object_detection_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_object_detection_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_object_detection_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_object_detection_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  object_detection_msgs__rosidl_typesupport_cExport.cmake  object_detection_msgs__rosidl_typesupport_cppExport-noconfig.cmake  object_detection_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake
src/detection/install/object_detection_msgs/share/object_detection_msgs/msg/: BoundingBox.idl  BoundingBoxes.idl  BoundingBoxes.msg  CarPosition.idl  CarPosition.msg  MotorAngle.msg
src/detection/install/target_ekf/share/target_ekf/: local_setup.dsv  local_setup.sh  package.sh  package.xml  package.zsh
src/detection/install/target_ekf/share/target_ekf/cmake/: target_ekfConfig.cmake
src/detection/log/: latest_build
src/detection/object_detection_msgs/: CMakeLists.txt
src/detection/target_ekf/: CMakeLists.txt
src/detection/target_ekf/config/: camera.yaml
src/detection/target_ekf/launch/: target_ekf.launch.py
src/detection/target_ekf/src/: target_ekf_node.cpp  target_ekf_sim_node.cpp
src/mapping/: CMakeLists.txt  nodelet_plugin.xml
src/mapping/config/: minimal.rviz
src/mapping/install/: local_setup.sh  setup.sh
src/mapping/install/mapping/include/mapping/: mapping.h
src/mapping/install/mapping/lib/mapping/: mapping_vis_node  visualize_history_path
src/mapping/install/mapping/share/ament_index/resource_index/package_run_dependencies/: mapping
src/mapping/install/mapping/share/ament_index/resource_index/rclcpp_components/: mapping
src/mapping/install/mapping/share/mapping/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.sh  package.xml  package.zsh
src/mapping/install/mapping/share/mapping/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  mappingConfig.cmake
src/mapping/install/mapping/share/mapping/launch/: mapping.launch.py
src/mapping/launch/: mapping.launch.py  run.launch.py  rviz_sim.launch.py
src/mapping/log/: latest_build
src/mapping/src/: mapping.cc  mapping_nodelet.cpp  mapping_vis_node.cpp  visualize_history_path.cpp
src/planning/DecompROS/decomp_basis/: CMakeLists.txt  package.xml
src/planning/DecompROS/decomp_geoemtry/: CMakeLists.txt  package.xml
src/planning/DecompROS/decomp_ros_msgs/: CMakeLists.txt
src/planning/DecompROS/decomp_ros_utils/: CMakeLists.txt  package.xml  plugin_description.xml
src/planning/DecompROS/decomp_ros_utils/include/decomp_rviz_plugins/: bound_visual.hpp  ellipsoid_array_display.hpp  ellipsoid_array_visual.hpp  mesh_visual.hpp  polyhedron_array_display.hpp  vector_visual.hpp
src/planning/DecompROS/decomp_ros_utils/include/rviz_common/: frame_manager.hpp
src/planning/DecompROS/decomp_ros_utils/include/rviz_rendering/objects/: mesh_shape.hpp
src/planning/DecompROS/decomp_ros_utils/src/: bound_visual.cpp  ellipsoid_array_display.cpp  ellipsoid_array_visual.cpp  mesh_visual.cpp  polyhedron_array_display.cpp  vector_visual.cpp
src/planning/DecompROS/decomp_ros_utils/src/objects/: mesh_shape.cpp
src/planning/planning/: CMakeLists.txt  package.xml  planning_nodelet.cpp
src/planning/planning/launch/: debug.launch.py  fake_car_target.launch.py  fake_target.launch.py  log.launch.py  planning.launch.py  simulation1.launch.py  simulation2.launch.py  simulation_landing.launch.py
src/planning/planning/src/: play_bag_node.cpp  test_node.cpp  traj_server.cpp
src/quadrotor_msgs/: CMakeLists.txt
src/uav_simulator/local_sensing/: CMakeLists.txt  package.xml
src/uav_simulator/odom_vis/odom_visualization/: CMakeLists.txt  package.xml
(+454 files in other folders)
