<?xml version="1.0"?>
<package format="3">
  <name>planning</name>
  <version>0.0.1</version>
  <description>The planning package ported to ROS 2</description>

  <maintainer email="jlji@zju.edu.cn">ji</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>quadrotor_msgs</depend>
  <depend>traj_opt</depend>
  <depend>mapping</depend>
  <depend>decomp_ros_utils</depend>
  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
