<?xml version="1.0"?>
<package format="3">
  <name>quadrotor_msgs</name>
  <version>0.0.0</version>
  <description>The quadrotor_msgs package (ROS 2 port of your custom messages)</description>

  <maintainer email="jlji@zju.edu.cn">ji</maintainer>
  <license>GPL-3.0-only</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- for message generation -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- message dependencies -->
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <!-- runtime dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <!-- ← add member_of_group here, as a direct child of <package> -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <!-- Tell ament this is an interface package -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
