<?xml version="1.0"?>
<package format="3">
  <name>decomp_basis</name>
  <version>0.0.0</version>
  <description>Core data types for DecompROS (ported to ROS 2)</description>
  <maintainer email="you@your.domain">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
