<?xml version="1.0"?>
<package format="3">
  <name>decomp_geometry</name>
  <version>0.0.0</version>
  <description>Geometry utilities for decomposition</description>

  <maintainer email="you@your.org">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>decomp_basis</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
