<?xml version="1.0"?>
<package format="3">
  <name>object_detection_msgs</name>
  <version>0.0.0</version>
  <description>The object_detection_msgs package</description>

  <maintainer email="xun@todo.todo">xun</maintainer>
  <license>Apache-2.0</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- for interface generation -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- message dependency -->
  <build_depend>std_msgs</build_depend>

  <!-- runtime dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- mark this as an interface package -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
