<?xml version="1.0"?>
<package format="3">
  <name>target_ekf</name>
  <version>0.0.0</version>
  <description>The target_ekf package</description>

  <maintainer email="jlji@zju.edu.cn">ji</maintainer>
  <license>GPL-3.0-only</license>

  <!-- ament build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 API dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>object_detection_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_filters</build_depend>

  <!-- Eigen3 support -->
  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>Eigen3</build_depend>

  <!-- runtime -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>object_detection_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <!-- export ament cmake package type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
