<?xml version="1.0"?>
<package format="3">
  <name>mapping</name>
  <version>0.0.0</version>
  <description>The mapping package (ROS 2 port of occlusion-aware mapper)</description>

  <maintainer email="jlji@zju.edu.cn">ji</maintainer>
  <license>GPL-3.0-only</license>

  <!-- ament build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>object_detection_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>PCL</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>pluginlib</build_depend>

  <!-- execution/runtime dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>quadrotor_msgs</exec_depend>
  <exec_depend>object_detection_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>PCL</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <!-- component export -->
  <export>
    <build_type>ament_cmake</build_type>
    <rclcpp_components plugin="${prefix}/share/mapping/nodelet_plugin.xml"/>
  </export>
</package>
